--- a/index.html
+++ b/index.html
@@ -7,26 +7,35 @@
   </head>
 
   <body class="fondos">
-    <div class="col-md-4 container-login">
-      <div class="img-container">
-        <img  class="logo" src="img/Logo-index.png">
+      <div class="cantainer">
+        <div class="row">
+          <div class="col-md-4">
+
+          </div>
+          <div class="col-md-4 container-login">
+            <div class="img-container">
+              <img  class="logo" src="img/Logo-index.png">
+            </div>
+            <form>
+              <div class="form-group">
+                <strong for="exampleInputEmail1">Username</strong>
+                <input type="text" class="form-control" aria-describedby="emailHelp" placeholder="Ej: David Quiroga">
+              </div>
+              <div class="form-group">
+                <strong for="exampleInputPassword1">Password</strong>
+                <input type="password" class="form-control" placeholder="*******">
+              </div>
+              <div class="form-group form-check">
+                <input type="checkbox" class="form-check-input">
+                <label class="form-check-label" for="exampleCheck1">Check me out</label>
+              </div>
+              <a href="Inicio.html"><button type="button" class="btn btn-warning">Login</button></a>
+            </form>
+          </div>
+          <div class="col-md-4">
+
+          </div>
+        </div>
       </div>
-      <form>
-        <div class="form-group">
-          <strong for="exampleInputEmail1">Username</strong>
-          <input type="text" class="form-control" aria-describedby="emailHelp" placeholder="Ej: David Quiroga">
-        </div>
-        <div class="form-group">
-          <strong for="exampleInputPassword1">Password</strong>
-          <input type="password" class="form-control" placeholder="*******">
-        </div>
-        <div class="form-group form-check">
-          <input type="checkbox" class="form-check-input">
-          <label class="form-check-label" for="exampleCheck1">Check me out</label>
-        </div>
-        <a href="Inicio.html"><button type="button" class="btn btn-warning">Login</button></a>
-      </form>
-    </div>
-    
   </body>
 </html>
